--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="icon" type="image/png" href="imagenes\Icon.png">
-        <link rel="stylesheet" type="text/css" href="css/css3.css">
-      <script src="js/jquery.min.js"></script> 
+        <link rel="stylesheet" type="text/css" href="jsss/css3.css">
+      <script src="jsss/jquery.min.js"></script> 
    </head>
       <body>
            <nav class="navbar navbar-expand-lg navbar-light bg-light ">
@@ -15,7 +15,7 @@
               <nav class="navbar navbar-light ">
                   <div class="container-fluid">
                   <a class="navbar-brand" href="Navegacion.php">
-                    <img src="imagenes/LogoEmpresa.png" alt="" width="250" height="50" class="d-inline-block align-text-top">     
+                    <img src="imagenes/LogoEmpresa.png" alt="" width="240" height="40" class="d-inline-block align-text-top">     
                   </a>
                 </div>
               </nav>
