--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="icon" type="image/png" href="imagenes\Icon.png">
-        <link rel="stylesheet" type="text/css" href="jsss/css3.css">
+        <link rel="stylesheet" type="text/css" href="jsss/css33.css">
       <script src="jsss/jquery.min.js"></script> 
    </head>
       <body>
@@ -81,7 +81,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -104,7 +104,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -127,7 +127,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -150,7 +150,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -192,7 +192,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -215,7 +215,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -238,7 +238,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
@@ -261,7 +261,7 @@
                                                       <img src="img/objetivo.jpg" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
-                                                       <h6>texto</h6>    
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
                                                         <a href="detalle.php">
