--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.php">
+                                                        <a href="eliminar.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -112,7 +112,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.php">
+                                                        <a href="eliminar.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -135,7 +135,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.php">
+                                                        <a href="eliminar.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -158,7 +158,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.php">
+                                                        <a href="eliminar.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
