--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
           </div>
       </nav>
       <br>
+       <nav class="navbar navbar-expand-lg navbar-light " >
+ 
+       <form action="buscar.php" method="post" class="col-md-4 col-lg-4 col-11 mx-auto my-auto search-box">   
+            <div class="input-group form-container">
+               <div id='loader' style='display: none;'>
+                 <img src="imagenes/loader.gif" width="100">
+               </div>
+               <input type="text" name="search" class="form-control search_input" id="buscador" required="" autofocus="autofocus" placeholder="Encuentra argollas, hebillas,etc.,..">
+               <span class="input-group-btn">
+                  <button class="btn btn-search"  type="submit" name="submit" id='but_searcch' value='Search'>
+                    <img src="img/lup.jpg" width="40">
+                  </button>
+               </span> 
+            </div>
+       </form>
+    </nav>
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
