--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.html">
+                                                        <a href="eliminarTambien.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -129,7 +129,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.html">
+                                                        <a href="eliminarTambien.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -152,7 +152,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.html">
+                                                        <a href="eliminarTambien.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
@@ -175,7 +175,7 @@
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
                                                     </div>
                                                       <div class="contentss">
-                                                        <a href="eliminar.html">
+                                                        <a href="eliminarTambien.html">
                                                         <button >Ver Detalles</button>
                                                         </a> 
                                                       </div>
