--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
     </div>
 
     </div>
+  
   <div class="container"> 
-                       <div class="row">
+                       <div class="row" >
                          <section id="item" class="col-md-3 text-center">
                              <section id="blogss">
                                  <div class="contenedors">
@@ -100,7 +101,53 @@
                                           <div class="target">   
                                                     </div>
                                                     <div class="image">
-                                                      <img src="img/objetivo.jpg" class="img-fluid" >
+                                                      <img src="img/cintaAmarilla.png" class="img-fluid" >
+                                                    </div>
+                                                    <div class="contents">
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
+                                                    </div>
+                                                      <div class="contentss">
+                                                        <a href="eliminarTambien.html">
+                                                        <button >Ver Detalles</button>
+                                                        </a> 
+                                                      </div>
+                                           <div class="empty">
+                                           </div>                   
+                                       </div>           
+                                 </div>           
+                             </section>          
+                         </section>
+                          <section id="item" class="col-md-3 text-center">
+                             <section id="blogss">
+                                 <div class="contenedors">
+                                      <div class="containerTarg">
+                                          <div class="target">   
+                                                    </div>
+                                                    <div class="image">
+                                                      <img src="img/CINTAcOLORES.png" class="img-fluid" >
+                                                    </div>
+                                                    <div class="contents">
+                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
+                                                    </div>
+                                                      <div class="contentss">
+                                                        <a href="eliminarTambien.html">
+                                                        <button >Ver Detalles</button>
+                                                        </a> 
+                                                      </div>
+                                           <div class="empty">
+                                           </div>                   
+                                       </div>           
+                                 </div>           
+                             </section>          
+                         </section>
+                          <section id="item" class="col-md-3 text-center">
+                             <section id="blogss">
+                                 <div class="contenedors">
+                                      <div class="containerTarg">
+                                          <div class="target">   
+                                                    </div>
+                                                    <div class="image">
+                                                      <img src="img/CINTAcOLORES.png" class="img-fluid" >
                                                     </div>
                                                     <div class="contents">
                                                        <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
@@ -138,31 +185,8 @@
                                        </div>           
                                  </div>           
                              </section>          
-                         </section>
-                          <section id="item" class="col-md-3 text-center">
-                             <section id="blogss">
-                                 <div class="contenedors">
-                                      <div class="containerTarg">
-                                          <div class="target">   
-                                                    </div>
-                                                    <div class="image">
-                                                      <img src="img/objetivo.jpg" class="img-fluid" >
-                                                    </div>
-                                                    <div class="contents">
-                                                       <h6>Hebilla con rodillo cr 38 mm reforzado 2 hebijones</h6>    
-                                                    </div>
-                                                      <div class="contentss">
-                                                        <a href="eliminarTambien.html">
-                                                        <button >Ver Detalles</button>
-                                                        </a> 
-                                                      </div>
-                                           <div class="empty">
-                                           </div>                   
-                                       </div>           
-                                 </div>           
-                             </section>          
-                         </section>
-                          <section id="item" class="col-md-3 text-center">
+                         </section> 
+                            <section id="item" class="col-md-3 text-center">
                              <section id="blogss">
                                  <div class="contenedors">
                                       <div class="containerTarg">
@@ -188,6 +212,8 @@
                        </div>          
                   </div>  
                   <br>
+             
+
          <footer class="bg-secondary text-black pt-5 pb-4">
  
   <div class="container text-center text-md-left">
@@ -267,4 +293,5 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
       </body>
+
 </html>
